[DDW-633] Fix table offset scrollbar

--- a/source/renderer/app/components/widgets/Table.scss
+++ b/source/renderer/app/components/widgets/Table.scss
@@ -81,6 +81,12 @@
     .content {
       overflow-y: scroll;
       position: relative;
+      &::-webkit-scrollbar-track {
+        margin: 22px 0 -8px;
+      }
+      &::-webkit-scrollbar-button {
+        display: none;
+      }
     }
     th {
       background-color: var(--rp-modal-bg-color);
